--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,66 +1,119 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : May 9, 2016, 9:27:06 PM
-    Author     : Lenovo
-*/
-h1 {
-color:#2B64B5;
+body{
+  font: 15px/1.5 Arial, Helvetica,sans-serif;
+  padding:0;
+  margin:0;
+  background-color:#ffffff;
 }
 
-h2{
-color:#2B64B5;
+/* Global */
+.container{
+  width:80%;
+  margin:auto;
+  overflow:hidden;
 }
 
- body
-    {
-        background-repeat:no-repeat;
-        overflow:hidden;
-        font-family:Arial, Helvetica, sans-serif;
-    }
-    .logo
-    {
-        align-content:center;
-        margin:0 0px 0px 0px;
-    }
-    .logoleftside
-    {
-        color:#2B64B5;
-        text-align:right;
-        float:left;
-        padding-left:140px;
-        padding-top:40px;
-        word-spacing:10px;
-    }
-    .logorightside
-    {
-        color:#2B64B5;
-        text-align:left;
-        float:right;
-        padding-right:280px;
-        padding-top:40px;
-        word-spacing:10px;
-    }
-    .compic
-    {
-        border: 3px solid black;
-        width:600px;
-        height:300px;
-    }
-    .caption
-    {
-        text-align:left;
-    }
-    
-    .pic 
+#socialmediaicons{
+position: absolute; right: 20px; top: 80px;
+}
+
+ul{
+  margin:0;
+  padding:0;
+}
+
+.button_1{
+  height:38px;
+  background:#e8491d;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:#ffffff;
+}
+
+
+/* Header **/
+header{
+  background:#ffffff;
+  color:#ffffff;
+  padding-top:10px;
+  min-height:70px;
+  border-bottom:#2841fc 10px solid;
+  #social-media-icons { float: right; }
+  #social-media-icons ul li { display: inline; }
+  #social-media-icons ul { padding: 10px 10px 10px 10px; float: right }
+
+}
+
+header a{
+  color:#000000;
+  text-decoration:none;
+  text-transform: uppercase;
+  font-size:16px;
+}
+
+header li{
+  float:left;
+  display:inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding{
+  float:left;
+}
+
+header #branding h1{
+  margin:0;
+}
+
+header nav{
+  float:right;
+  margin-top:10px;
+}
+
+header .highlight, header .current a,h2{
+  color:#000000;
+  font-weight:bold;
+}
+
+header a:hover{
+  color:#cccccc;
+  font-weight:bold;
+}
+
+/* About*/
+#about{
+  min-height:400px;
+  min-width:600px;
+  text-align:center;
+  color:#ffffff;
+}
+
+
+#about p{
+  font-size:19px;
+  color:black;
+ text-align:center;
+}
+#about h1{
+  margin-top:20px;
+  font-size:30px;
+  margin-bottom:10px;
+  color:blue;
+  text-decoration: underline overline;
+}
+#about h2{
+  font-size:20px;
+  color:black;
+  text-align:center;
+text-decoration:underline;
+}
+
+.pic 
     {
         border: 10px solid #fff;  
-        float: left;
-         height: 200px;
-         width: 200px;
+        position: absolute; left: 20px; top: 930px;
+         height: 150px;
+         width: 150px;
          margin: 20px;
   
         -webkit-box-shadow: 5px 5px 5px #111;
@@ -81,66 +134,119 @@ color:#2B64B5;
           -ms-transform: rotate(-10deg);
           transform: rotate(-10deg);
     }
+h3{
+text-align:center;
+color:black;
+}
 
-    .footnote{
-        color:#FFFFFF;
-    }
-    #container
-    {
-        position: fixed; 
-        overflow-y: scroll;
-    top: 0; right: 0; bottom: 0; left: 0; 
-    }
 
-    #side
-    {
-        width:100px;
-        height:1000px;
-        float:left;
-        padding:10px;
-    }
-    #header
-    {
-      background-color:#FFFFFF;
-      border:15px solid rgb(250, 0, 0);
-      border:15px solid rgba(250, 250, 250, .5);
-      -webkit-background-clip: padding-box;
-      background-clip:padding-box;
-      margin-left:auto;
-	  margin-right:auto;
-      margin-top:10px;
-      margin-bottom:10px;
-      width:1000px;
-        height:195px;
-    }
-    #section1
-    {
-        background-color:#FFFFFF;
-        border:15px solid rgb(250, 0, 0);
-        border:15px solid rgba(250, 250, 250, .5);
-        text-align: left;
-        -webkit-background-clip: padding-box;
-        background-clip:padding-box;
-        margin-left:auto;
-        margin-right:auto;
-        width:1000px;
-        height:700px;
-        padding:.5px;
-	  font-size:16px;
-        
-    }
-    #footer
-    {
-        background-color:#2B64B5;
-        border:10px solid rgb(250, 0, 0);
-        border:10px solid rgba(250, 250, 250, .5);
-        -webkit-background-clip: padding-box;
-        background-clip:padding-box;
-        margin-top:5px;
-        margin-left:auto;
-		margin-right:auto;
-        width:991px;
-        height:30px;
-        float:center;
-        padding:10px 10px;
-    }
+/* Newsletter */
+#newsletter{
+  padding:15px;
+  color:#ffffff;
+  background:#2841fc
+}
+
+#newsletter h1{
+  float:left;
+}
+
+#newsletter form {
+  float:right;
+  margin-top:15px;
+}
+
+#newsletter input[type="email"]{
+  padding:4px;
+  height:25px;
+  width:250px;
+}
+
+/* Boxes */
+#boxes{
+  margin-top:20px;
+}
+
+#boxes .box{
+  float:left;
+  text-align: center;
+  width:30%;
+  padding:10px;
+}
+
+#boxes .box img{
+  width:90px;
+}
+h1{
+text-align: center;
+text-decoration:underline;
+}
+
+/* Sidebar */
+aside#sidebar{
+  float:right;
+  width:30%;
+  margin-top:10px;
+}
+
+aside#sidebar .quote input, aside#sidebar .quote textarea{
+  width:90%;
+  padding:5px;
+}
+
+/* Main-col */
+article#main-col{
+  float:left;
+  width:65%;
+}
+
+/* Services */
+ul#services li{
+  list-style: none;
+  padding:20px;
+  border: #cccccc solid 1px;
+  margin-bottom:5px;
+  background:#e6e6e6;
+}
+
+footer{
+  padding:20px;
+  margin-top:20px;
+  color:#ffffff;
+  background-color:#000000;
+  text-align: center;
+}
+
+/* Media Queries */
+@media(max-width: 768px){
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  article#main-col,
+  aside#sidebar{
+    float:none;
+    text-align:center;
+    width:100%;
+  }
+
+  header{
+    padding-bottom:20px;
+  }
+
+  #showcase h1{
+    margin-top:40px;
+  }
+
+  #newsletter button, .quote button{
+    display:block;
+    width:100%;
+  }
+
+  #newsletter form input[type="email"], .quote input, .quote textarea{
+    width:100%;
+    margin-bottom:5px;
+  }
+}
