--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,3 +1,4 @@
+
 body{
   font: 15px/1.5 Arial, Helvetica,sans-serif;
   padding:0;
@@ -5,15 +6,45 @@ body{
   background-color:#ffffff;
 }
 
-/* Global */
+//* Global */
 .container{
-  width:80%;
+  width:100%;
   margin:auto;
   overflow:hidden;
+    
 }
 
-#socialmediaicons{
-position: absolute; right: 20px; top: 80px;
+.container-fluid{
+ padding-bottom: 25px;
+    
+}
+
+/* Style all font awesome icons */
+.fa {
+    padding: 0px;
+    margin: 0px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.9;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+    color: white;
+}
+
+/* Instagram */
+.fa-instagram {
+    color: white;
 }
 
 ul{
@@ -31,16 +62,13 @@ ul{
 }
 
 
-/* Header **/
+//* Header **/
 header{
   background:#ffffff;
   color:#ffffff;
   padding-top:10px;
   min-height:70px;
   border-bottom:#2841fc 10px solid;
-  #social-media-icons { float: right; }
-  #social-media-icons ul li { display: inline; }
-  #social-media-icons ul { padding: 10px 10px 10px 10px; float: right }
 
 }
 
@@ -65,10 +93,6 @@ header #branding h1{
   margin:0;
 }
 
-header nav{
-  float:right;
-  margin-top:10px;
-}
 
 header .highlight, header .current a,h2{
   color:#000000;
@@ -80,8 +104,21 @@ header a:hover{
   font-weight:bold;
 }
 
+.navbar {
+      margin-bottom: 0;
+      border-radius: 0;
+    }
+
+.navbar-brand {
+  padding: 0px;
+}
+
 /* About*/
 #about{
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
   min-height:400px;
   min-width:600px;
   text-align:center;
@@ -222,6 +259,7 @@ footer{
   header #branding,
   header nav,
   header nav li,
+  #about .cover,
   #newsletter h1,
   #newsletter form,
   #boxes .box,
@@ -250,3 +288,5 @@ footer{
     margin-bottom:5px;
   }
 }
+
+ 
